--- a/index.html
+++ b/index.html
@@ -39,10 +39,12 @@
                 </div>
             </div>
         </div>
-        <p class="summary-text"><br>꾸준한 노력으로 성장하는 오성민입니다.
-            재능과 센스보다는 근면 성실함으로 나아가겠습니다.
-            <br>데이터 파이프라인 구축 및 최적화 역량을 갖춘 엔지니어로 성장하는 것을 목표로 하며,<br>
-신기술을 지속적으로 학습하고 팀과 함께 성장하는 것을 지향합니다.</p>
+        <p class="summary-text">
+            <span class="summary-line">꾸준한 노력으로 성장하는 오성민입니다.</span>
+            <span class="summary-line">재능과 센스보다는 근면 성실함으로 나아가겠습니다.</span>
+            <span class="summary-line">데이터 파이프라인 구축 및 최적화 역량을 갖춘 엔지니어로 성장하는 것을 목표로 하며,</span>
+            <span class="summary-line">신기술을 지속적으로 학습하고 팀과 함께 성장하는 것을 지향합니다.</span>
+        </p>
     </header>
 
     <!-- Navigation -->
